<?xml version="1.0" encoding="utf-8"?>


<resources>
    <string name="app_name">My App Portfolio</string>
    <string> name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="capstone">Capstone</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="build_big">Build it Bigger</string>
    <string name="lib_app">Library App</string>
    <string name="score_app">Scores App</string>
    <string name="spot_steam">Spotify Streamer</string>
    <string name="my_nano_apps">My Nanodegree Apps</string>
</resources>


