<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/my_nano_apps"
            android:textSize="28sp" />

        <Button
            android:id="@+id/spotify_button"
            style="@style/ButtonTheme"
            android:text="@string/spot_steam" />

        <Button
            android:id="@+id/scores_button"
            style="@style/ButtonTheme"
            android:text="@string/score_app" />

        <Button
            android:id="@+id/lib_button"
            style="@style/ButtonTheme"
            android:text="@string/lib_app" />

        <Button
            android:id="@+id/build_button"
            style="@style/ButtonTheme"
            android:text="@string/build_big" />

        <Button
            android:id="@+id/read_button"
            style="@style/ButtonTheme"
            android:layout_marginBottom="7dp"
            android:text="@string/xyz_reader" />

        <Button
            android:id="@+id/cap_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="#f44336"
            android:onClick="myApp"
            android:padding="20dp"
            android:text="@string/capstone"
            android:textColor="@android:color/white" />


    </LinearLayout>

</ScrollView>



